@@ -78,6 +78,6 @@
       <Link>copying.gpl</Link>
     </None>
     <None Include="readme" />
-    <None Include="Resources\comex-qt.desktop" />
+    <None Include="Resources\comex-qt" />
   </ItemGroup>
 </Project>
